# aigent

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  PORTFOLIO.md  README.md  main.py  pyproject.toml  railway.toml
docs/plans/: 2026-02-14-web-interface-design.md  2026-02-14-web-interface-plan.md
src/aigent/: agent.py  schemas.py
src/aigent/api/: app.py
src/aigent/middleware/: selective_interrupt.py
src/aigent/tools/: __init__.py  calculate_budget.py  compare_prices.py  get_reviews.py  search_product.py
src/pricewise/: __init__.py  agent.py  schemas.py
src/pricewise/api/: __init__.py  app.py  routes.py  streaming.py
src/pricewise/middleware/: __init__.py
src/pricewise/tools/: __init__.py  _client.py  calculate_budget.py  check_availability.py  compare_prices.py  delegate_research.py  find_coupons.py  get_reviews.py  scrape_url.py  search_product.py  wishlist.py
tests/: test_agent.py  test_api.py  test_calculate_budget.py  test_check_availability.py  test_compare_prices.py  test_delegate_research.py  test_find_coupons.py  test_get_reviews.py  test_middleware.py  test_schemas.py  test_streaming.py  test_tools.py
web/: .env.example  package-lock.json
web/src/: types.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatInput.tsx  ChatMessage.tsx  ComparisonTable.tsx  ExportButton.tsx  ReceiptCard.tsx  ThemeToggle.tsx  ToolCallCard.tsx
web/src/hooks/: useChatStream.ts  useTheme.ts
web/src/lib/: export.ts
